added all entities tests